# esp-nimble-nordic-uart

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  idf_component.yml  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
components/nimble-nordic-uart/: CMakeLists.txt  Kconfig  README.md  buffer.c  idf_component.yml  main.c  nimble.c
components/nimble-nordic-uart/include/: esp-nimble-nordic-uart.h  nimble-nordic-uart.h
components/nimble-nordic-uart/src/: CMakeLists.txt  buffer.c  main.c  nimble.c
components/nimble-nordic-uart/test/: CMakeLists.txt  test_buffer.c  test_main.c  test_nimble.c
example/: .gitignore  CMakeLists.txt  idf_component.yml  sdkconfig
example/main/: CMakeLists.txt  example.c  main.c
main/: CMakeLists.txt  example.c  main.c
src/: esp-nimble-nordic-uart.h  main.c
test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
test/main/: CMakeLists.txt  example_test.c  example_unit_test_test.c
web/: index.html
